[package]
authors = [
  "James Nugent <james@jen20.com>",
  "Samani G. Gikandi <samani@gojulas.com>",
]
categories = ["network-programming", "asynchronous"]
description = """
Server Reflection module of `tonic` gRPC implementation.
"""
edition = "2021"
homepage = "https://github.com/hyperium/tonic"
documentation = "https://docs.rs/tonic-reflection/0.11.0"
keywords = ["rpc", "grpc", "async", "reflection"]
license = "MIT"
name = "tonic-reflection"
readme = "README.md"
repository = "https://github.com/hyperium/tonic"
version = "0.11.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
server = ["prost-types", "dep:tokio", "dep:tokio-stream"]
default = ["server"]

[dependencies]
prost = {git = "https://github.com/yuxuan-xie/prost.git", branch = "config-oneof-enum-name"}
prost-types = {git = "https://github.com/yuxuan-xie/prost.git", branch = "config-oneof-enum-name", optional = true}
tokio = { version = "1.0", features = ["sync", "rt"], optional = true }
tokio-stream = {version = "0.1", features = ["net"], optional = true }
tonic = { version = "0.11", path = "../tonic", default-features = false, features = ["codegen", "prost"] }

[dev-dependencies]
tonic = { version = "0.11", path = "../tonic", default-features = false, features = ["transport"] }
