[package]
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2021"
license = "MIT"
name = "disable-comments"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12"
tonic = { path = "../../tonic" }

[build-dependencies]
prost-build = { git = "https://github.com/yuxuan-xie/prost.git", branch = "config-oneof-enum-name" }
tonic-build = { path = "../../tonic-build" }
