[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2021"
license = "MIT"
name = "wellknown-compiled"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
prost = {git = "https://github.com/yuxuan-xie/prost.git", branch = "config-oneof-enum-name"}
tonic = {path = "../../tonic"}

[build-dependencies]
prost-build = {git = "https://github.com/yuxuan-xie/prost.git", branch = "config-oneof-enum-name"}
tonic-build = {path = "../../tonic-build"}
